[package]
name = "noname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.23"
physics = {path = "physics"}
serde = {version = "1.0.144", features = ["derive"]}

[workspace]
members = ["physics"]